[package]
name = "drcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
actix-cors = "0.7"
chrono = "0.4.38"