[package]
name = "drcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-drive3 = "2.0.4+1.0.14"
yup-oauth2 = "6.0"
hyper = "0.14"
hyper-rustls = "0.23"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
actix-cors = "0.7"
chrono = "0.4.38"
dotenv = "0.15"